--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -22,27 +22,31 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  # Single deploy job since we're just deploying
   deploy:
     environment:
       name: github-pages
       url: ${{ steps.deployment.outputs.page_url }}
-      theme: minima
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+      - name: Set up Ruby
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: '2.7'  # หรือเวอร์ชัน Ruby ที่คุณใช้
+      - name: Install dependencies
+        run: bundle install  # ติดตั้ง dependencies ที่จำเป็น
+      - name: Build the site
+        run: bundle exec jekyll build  # สร้างเว็บไซต์
       - name: Setup Pages
         uses: actions/configure-pages@v5
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          # Upload entire repository
-          path: '.'
+          path: './_site'  # ไดเรกทอรีที่สร้างโดย Jekyll
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v4
-        title: "Smart Gas Detector"
 
   
 o
