--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: "Smart Gas Detector"
 description: "เว็บไซต์โปรเจกต์ Smart Gas Detector"
 baseurl: "" 
-url: "https://chakkapop.github.io/Smart-Gas-Detector/"
+url: "https://chakkapop.github.io/"
 theme: minima
 plugins:
   - jekyll-feed
